welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:5: error: illegal start of simple expression
	}
        ^