welcome.lessons.welcome.loopfor.LoopStairs.scala.code
avance();avance();avance();
for (i <- 